--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.26",
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
     "@fortawesome/vue-fontawesome": "^0.1.9",
+    "chart.js": "^2.9.3",
     "core-js": "^3.4.4",
     "dat.gui": "^0.7.6",
     "raf-loop": "^1.1.3",
     "stats.js": "^0.17.0",
     "three": "^0.112.1",
     "vue": "^2.6.10",
+    "vue-chartjs": "^3.5.0",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.2"
   },
